[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.190", features = ["derive"]}
serde_derive = "1.0.190"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
serde_cbor = "0.11.2"
image = "0.24.7"
rayon = "1.8.0"
sysinfo = "0.29.10"
minifb = "0.20.0"
log = "0.4.20"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client_app"
path = "src/client_app.rs"
